# geqscpp

./: CMakeLists.txt  Makefile  bndmat.cpp  compar.cpp  curf.cpp  dislin.met  dislin_1.met  eqsil.cpp  flux.cpp  gauss.cpp  geq  geq.cpp  geq.h  intpol.cpp  plotit.cpp  saddle.cpp  splnco.cpp  startt.cpp  topol.cpp  xcur.cpp
